# term-video

./: .gitignore  CMakeLists.txt  README.md
ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
include/: audio.hpp  audio_player.hpp  buffer_renderer.hpp  colour.hpp  export.hpp  keyboard.hpp  media.hpp  media_player.hpp  optimiser.hpp  options.hpp  performance_checker.hpp  renderer.hpp  terminal.hpp  video_player.hpp
src/: audio.cpp  audio_player.cpp  buffer_renderer.cpp  colour.cpp  export.cpp  keyboard.cpp  main.cpp  media.cpp  media_player.cpp  optimiser.cpp  options.cpp  performance_checker.cpp  renderer.cpp  terminal.cpp  video_player.cpp
